Modernize to Jenkins 2.479 and Jakarta EE 9
* Adapter methods are added for old overrides.
* Switch to JUnit 5 for tests